# Modern-C

./: README.md
level0/exercises/: exs3  exs5  exs6  exs7  exs9  getting-started-badly  listing1-2.c  listing1-2_correct.c
level1/challenges/: .tags  .tags_sorted_by_file  CMakeLists.txt  a.out  challenge1.c  challenge10.c  challenge2.c  challenge3.c  challenge4.c  challenge5.c  challenge6.c  challenge7.c  challenge8.c  challenge9.c  level1_challenges.sublime-project  level1_challenges.sublime-workspace
level1/exercises/: .switch.c.swp  a.out  clock.c  exs1  exs13.c  exs15.c  exs17.c  exs2  exs22-27.c  exs28.c  exs30-32.c  exs33.c  exs36.c  exs4  exs41.c  exs43.c  exs45-46.c  exs48.c  exs49-50.c  exs5  exs51.c  exs52.c  exs53.c  exs54  exs55  exs56.c  exs57.c  exs59  exs6  exs60  exs61.c  exs62.c  exs7  switch.c  test
level2/challenges/: challenge12.c  challenge13.c  challenge14.c  challenge14.out  challenge15.c  challenge16.c  compile_commands.json  example.txt  makefile
level2/exercises/: a.out  circular.c  exs14.c  exs15.c  exs16.c  exs23.c  exs24.c  exs29  exs3.c  exs30.c  exs33.c  exs38.c  exs39_noOptimization.s  exs4.c  (+8 more)
level3/challenges/: CMakeLists.txt  challenge18.c  compile_commands.json
level3/challenges/.clangd/index/: challenge18.c.03763044E8053F47.idx
level3/exercises/: CMakeLists.txt  compile_commands.json  euclid.d  exs1.c  exs1.h  exs12.c  exs15_16_18_19_20.c  exs15_16_18_19_20.h  exs2  exs30.c  exs6.c  exs8  sighandler.c
level3/exercises/.clangd/index/: euclid.h.753553FF3DB919B1.idx  exs1.c.8A762DBBB051890E.idx  exs1.h.1212A4F1FC92BF8E.idx
